# spotify-macro

./: .env.example  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  analyze_artist_folder_patterns.py  analyze_overclassification.py  count_single_playlist_artists.py  debug_artist_data.py  debug_classification.py  hybrid_classification_systems.py  pyproject.toml  pytest.ini  requirements.txt  setup_telegram.py  test_with_real_mapping.py
.beads/: .gitignore  issues.jsonl
analysis/: BEST_RESULTS.md  NAVIGATION.md  classification_analysis_report.md
automations/: __init__.py
common/: __init__.py  config.py  constants.py  flow_character_utils.py  folder_sort_progress.py  folder_sort_utils.py  genre_cache.py  genre_classification_utils.py  library_sync.py  music_api_clients.py  music_api_config.py  playlist_data_utils.py  spotify_utils.py  telegram_utils.py
data/: .gitignore  folders_metadata.txt  playlist_folders.json
docs/: TODO.md  artist_matching_future_improvements.md  cache-system.md  classifier.md  cron_setup.md  feature_status.md  folder_sorter.md  genre_classification_implementation_plan.md  genre_classification_research_findings.md  library_cache.md  playlist_flow.md  test-account-sync.md  workflow.md
download/: artist_genres.py
scripts/: analyze_single_playlist_artists.py  check_playlist_sync_status.py  classify_new_playlist.py  clear_folder_playlists.py  create_folder_playlists.py  debug_unclassified_tracks.py  env.sh  export_library_uris.py  fetch_audio_features.py  find_audio_enhancement_candidates.py  find_track_in_playlists.py  folder_add.py  migrate_folder_mapping.py  run_playlist_flow_cron.sh  run_playlist_flow_tests.sh  run_spotify_artist_matching.sh  run_spotify_daily_liked.sh  run_spotify_folder_sort.sh  run_spotify_genre_save.sh  run_spotify_playlist_flow.sh  run_spotify_save.sh  run_spotify_single_artist_downflow.sh  spotify_auth.py  (+16 more)
(+110 files in other folders)
