[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "macos-automations"
version = "0.1.0"
description = "Collection of macOS automations and macros"
readme = "README.md"
requires-python = ">3.8"
license = { file = "LICENSE" }
authors = [
    { name = "macOS Automations Author" }
]
dependencies = [
    "certifi==2024.6.2",
    "charset-normalizer==3.3.2",
    "grapheme>=0.6.0",
    "idna==3.7",
    "python-dotenv==1.0.1",
    "redis==5.0.7",
    "regex>=2023.0.0",
    "requests==2.32.3",
    "spotipy==2.24.0",
    "tqdm>=4.67.1",
    "urllib3==2.2.2",
]

[project.urls]
"Homepage" = "https://github.com/username/macos-automations"

[tool.setuptools]
packages = ["macros", "common"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.7.5",
    "networkx>=3.1",
    "pandas>=2.0.3",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "scipy>=1.10.1",
]

[project.scripts]
save-spotify-track = "macros.spotify.save_current:main"
